<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/rgroup_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/days_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_chart_7_DAYS" />

        <RadioButton
            android:id="@+id/days_14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_chart_14_DAYS" />

        <RadioButton
            android:id="@+id/days_30"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_chart_30_DAYS" />
    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rgroup_days"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
		 android:layout_weight="1"
    </android.support.v4.view.ViewPager>

    <ViewStub
        android:id="@+id/vsHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inflatedId="@id/vsHeader"
        android:layout="@layout/header"
        android:layout_alignParentBottom="true" />

</RelativeLayout>