<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_export_TITLE_TEXT"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnKsubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/activity_export_BtnSubmit" />

            <Button
                android:id="@+id/btnKclean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnKsubmit"
                android:layout_alignBottom="@+id/btnKsubmit"
                android:layout_alignParentRight="true"
                android:text="@string/activity_export_BtnClean" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_export_METERNAME_TEXT"
                android:textSize="20sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/edKmetername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:singleLine="true"
                android:layout_gravity="center_vertical">
                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/gdatadate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_export_DATE_TEXT"
                android:textSize="20sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/edKdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:singleLine="true"
                android:layout_gravity="center_vertical">


            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_export_TIME_TEXT"
                android:textSize="20sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/edKtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:singleLine="true"
                android:layout_gravity="center_vertical">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_export_FLAG_TEXT"
                android:textSize="20sp"
                android:layout_gravity="center_vertical" />

            <Spinner
                android:id="@+id/spKflage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:listitem="@android:layout/simple_spinner_item"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_export_VALUE_TEXT"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/edKvalue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_export_HEIGHT_TEXT"
                android:textSize="20sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/edKheight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_export_WEIGHT_TEXT"
                android:textSize="20sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/edKweight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_export_NOTE_TEXT"
                android:textSize="20sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/edKnote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine"
                android:singleLine="true"
                android:layout_gravity="center_vertical"
                android:lines="4" />
        </LinearLayout>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <ViewStub
        android:id="@+id/vsHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inflatedId="@id/vsHeader"
        android:layout="@layout/header"
        android:layout_alignParentBottom="true" />
</RelativeLayout>