<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/textviewstatics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_statistics_TITLE_TEXT"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/FromDateSpinYear"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/FromDateSpinMonth"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/FromDateSpinDay"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/ToDateSpinYear"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/ToDateSpinMonth"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/ToDateSpinDay"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_statistics_DATE_TEXT" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_statistics_TIME_TEXT" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_statistics_FLAG_TEXT" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_statistics_VALUE_TEXT" />
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/lvGdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/linearLayout"
        android:layout_above="@+id/vsHeader">
    </ListView>

    <ViewStub
        android:id="@+id/vsHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inflatedId="@id/vsHeader"
        android:layout="@layout/header"
        android:layout_alignParentBottom="true" />
</RelativeLayout>